# serializer version: 1
# name: test_create[obj]
  dict({
    'created_at': 'approximately_now',
    'id': 1,
    'name': 'sample_1.fq.gz',
    'name_on_disk': '1-sample_1.fq.gz',
    'ready': True,
    'removed': False,
    'removed_at': None,
    'reserved': False,
    'size': 16700094,
    'type': 'reads',
    'uploaded_at': 'approximately_now',
    'user': dict({
      'administrator': False,
      'handle': 'leeashley',
      'id': 'bf1b993c',
    }),
  })
# ---
# name: test_create[sql]
  dict({
    'created_at': 'approximately_now',
    'id': 1,
    'name': 'sample_1.fq.gz',
    'name_on_disk': '1-sample_1.fq.gz',
    'ready': True,
    'removed': False,
    'removed_at': None,
    'reserved': False,
    'size': 16700094,
    'type': 'reads',
    'uploaded_at': 'approximately_now',
    'user': 'bf1b993c',
  })
# ---
# name: test_delete[after]
  dict({
    'created_at': datetime,
    'id': 1,
    'name': 'test.fq.gz',
    'name_on_disk': '1-test.fq.gz',
    'ready': True,
    'removed': True,
    'removed_at': datetime,
    'reserved': False,
    'size': 16700094,
    'type': 'reads',
    'uploaded_at': datetime,
    'user': dict({
      'administrator': False,
      'handle': 'leeashley',
      'id': 'bf1b993c',
    }),
  })
# ---
